[package]
name = "livedevel"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
actix="0.8.3"
actix-web = "1.0"
actix-web-actors = "1.0"
actix-service = "0.4.1"
actix-files = "0.1.4"

futures = "0.1.28"  # closure middlewares... (why?!)
listenfd = "0.3"    # auto reloading

crossbeam-channel = "0.3.9"
notify = "=5.0.0-pre.1"    # files changing
