[package]
name = "never_f5"
version = "0.1.0"
publish = true
edition = "2018"

authors = ["Daniel Fairhead <danthedeckie@gmail.com>"]
license = "GPL-3.0-only"
description = "An auto-reloading web server for development"
readme = "README.md"
homepage = "https://github.com/danthedeckie/never-f5"
repository = "https://github.com/danthedeckie/never-f5"
keywords = ["cli", "webserver", "websockets", "reloading", "development"]
categories = ["command-line-utilities", "web-programming::http-server", "development-tools"]


[dependencies]
actix="0.8.3"
actix-web = "1.0"
actix-web-actors = "1.0"
actix-service = "0.4.1"
actix-files = "0.1.4"

futures = "0.1.28"  # closure middlewares... (why?!)
listenfd = "0.3"    # auto reloading

crossbeam-channel = "0.3.9"
notify = "=5.0.0-pre.1"    # files changing

structopt = "0.2.18" # command line arguments!
